apps/prod/truthmetal/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: truthmetal
spec:
  redirectScheme:
    scheme: https
    permanent: true
