apps/prod/truthmetal/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truthmetal
  namespace: truthmetal
  labels:
    app.kubernetes.io/name: truthmetal
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: truthmetal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: truthmetal
      app.kubernetes.io/component: api
      app.kubernetes.io/part-of: truthmetal
      environment: production
  template:
    metadata:
      labels:
        app.kubernetes.io/name: truthmetal
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: truthmetal
          image: ghcr.io/ldamasio/truthmetal
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: grpc
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 250m
