apps/prod/truthmetal/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: truthmetal
  namespace: truthmetal
  labels:
    app.kubernetes.io/name: truthmetal
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: truthmetal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: truthmetal
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: truthmetal
    environment: production
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: grpc
